Condenses footer, no longer collapsable

--- a/_sass/modules/_footer.scss
+++ b/_sass/modules/_footer.scss
@@ -8,7 +8,7 @@ footer {
   position: relative;
 
   @media (max-width: 767px) {
-    padding: 35px 0 120px;
+    padding: 0 0 120px;
 
     ul {
       li {
@@ -48,7 +48,7 @@ footer {
     color: $light-gray;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 35px;
+    margin-bottom: 15px;
     text-align: center;
 
     a {
@@ -118,11 +118,7 @@ footer {
   .right-links {
       width: 100%;
       display: table;
-      margin: 0 0 60px 0;
-
-    & > div {
-      padding-bottom: 10px;
-    }
+      margin: 0 0 30px 0;
 
     @media (min-width: 768px) {
       padding: 0 0 0 35px;
@@ -134,7 +130,6 @@ footer {
       font-size: .8em;
       padding: 6px 0;
       letter-spacing: .5px;
-      line-height: 36px;
     }
 
     .right-link-headers  {
@@ -194,7 +189,7 @@ footer {
   }
 
   .footer-community p {
-    padding: 7px 0;
+    padding: 0;
 
     @media(min-width: 990px) {
       padding: 6px 0;
@@ -206,7 +201,7 @@ footer {
       content: '';
       display: inline-block;
       background: url($image-url) no-repeat center/cover;
-      width: 35px;
+      width: 25px;
       height: 35px;
       vertical-align: middle;
       margin: 0 15px 0 0;
